--- a/angular.json
+++ b/angular.json
@@ -12,7 +12,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "sman",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:application",
