--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.3",
-    "@angular/cdk": "^18.2.7",
+    "@angular/cdk": "^19.0.2",
     "@angular/common": "^19.0.3",
     "@angular/compiler": "^19.0.3",
     "@angular/core": "^19.0.3",
     "@angular/forms": "^19.0.3",
-    "@angular/material": "^18.2.7",
-    "@angular/material-date-fns-adapter": "^18.2.7",
+    "@angular/material": "^19.0.2",
+    "@angular/material-moment-adapter": "^19.0.2",
     "@angular/platform-browser": "^19.0.3",
     "@angular/platform-browser-dynamic": "^19.0.3",
     "@angular/router": "^19.0.3",
-    "@fortawesome/angular-fontawesome": "^0.15.0",
+    "@fortawesome/angular-fontawesome": "^1.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@types/google-maps": "^3.2.6",
     "angular-google-charts": "^16.0.1",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
