--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@angular/router": "^19.0.3",
     "@fortawesome/angular-fontawesome": "^1.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@ngrx/effects": "^18.1.1",
+    "@ngrx/entity": "^18.1.1",
+    "@ngrx/store": "^18.1.1",
+    "@ngrx/store-devtools": "^18.1.1",
     "@types/google-maps": "^3.2.6",
     "angular-google-charts": "^16.0.1",
     "moment": "^2.30.1",
