--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@ngrx/store-devtools": "^18.1.1",
     "@types/google-maps": "^3.2.6",
     "angular-google-charts": "^16.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
