feat: use Render server

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/cli": "^19.0.4",
     "@angular/compiler-cli": "^19.0.3",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^22.13.13",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
